[lworld] exploded-image/test broken since disable patching (JDK-8373806)

XMLWordPrintable

      Since JDK-8373806 (disable patching), simple Test case fails when using exploded-image:

      public class Test {
          static value class IntBox {
              Integer integerValue;

              public IntBox(Integer integerValue) {
                  this.integerValue = integerValue;
              }
          }

          public static void main(String[] args) {
              IntBox val1 = new IntBox(0);
              IntBox val2 = new IntBox(0);
              if (val1 != val2) throw new RuntimeException("FAIL");
          }
      }

      $> make exploded-image && build/$CONF_NAME/jdk/bin/javac --enable--preview --source 26 Test.java && build/$CONF_NAME/jdk/bin/java --enable--preview Test
      Exception in thread "main" java.lang.RuntimeException: FAIL
              at Test.main(Test.java:13)
      $> make && build/$CONF_NAME/images/jdk/bin/java --enable--preview Test && echo $?
      0

            Assignee:
            David Beaumont
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: