8373987: [lworld] exploded-image/test broken since disable patching (JDK-8373806)

Reviewed-by: lfoltan, rriggs